# hextool

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  util.rs
src/util/: error.rs  hex.rs  unhex.rs
tests/: converters.rs
