[package]
name = "hextool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
regex = "1.9.5"
colored = "2.0.4"

[profile.release]
overflow-checks = true