[package]
name = "hextool"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A simple command line tool to convert hex to string and string to hex"
homepage = "https://github.com/CyR1en/hextool"
repository = "https://github.com/CyR1en/hextool"
readme = "README.md"
keywords = ["hex", "string", "convert", "tool", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
regex = "1.9.5"